# scratch-test-value

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: deploy-docs-to-pages.yml
src/: arithmetic.rs  comparisons.rs  constants.rs  conversions.rs  lib.rs  lists.rs  math.rs  quirk_sink.rs  rand_range.rs  texts.rs
src/arithmetic/: addition.rs  constants.rs  division.rs  multiplication.rs  operator_traits.rs  subtraction.rs  test_addition.rs  test_addition2.rs  test_division.rs  test_multiplication.rs  test_subtraction.rs
src/comparisons/: cmp_traits.rs  equality.rs  logic.rs  ordering.rs  test_equality.rs  test_ordering.rs
src/conversions/: as_is_type.rs  from_components.rs  from_number.rs  to_bool.rs  to_float.rs  to_number.rs  to_text.rs
src/math/: exp.rs  modulo.rs  round.rs  sqrt.rs  trig.rs
src/texts/: nth_letter.rs
src/utils/: a_rc_string.rs  mod.rs  number_reprs.rs
