[package]
name = "scratch-test-value"
version = "0.1.0"
edition = "2024"

authors = ["Marcel Scherzinger"]
description = "This defines Scratch values and how they behave on arithmethic, logical and other operations"
documentation = "https://marcel-scherzinger.github.io/scratch-test-value"
repository = "https://github.com/marcel-scherzinger/scratch-test-value"

[dependencies]
derive_more = { version = "2.1.0", features = ["debug", "display"] }
itertools = "0.14.0"
serde_json = { version = "1", optional = true }

[features]
# replaces std::rc::Rc with std::sync::Arc so that values can be shared across threads
thread-share = []
serde_json = ["dep:serde_json"]

# linting
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"

